Change port contribution link

--- a/src/components/InstallSection.astro
+++ b/src/components/InstallSection.astro
@@ -216,7 +216,7 @@ const platforms = await Promise.all(
     }
   </div>
   <p class='submit-cta'>
-    Want to add your port? <a href='https://github.com/ayu-theme/ayu-colors/issues'>Contribute →</a>
+    Want to add your port? <a href='https://github.com/dempfi/ayu-site/blob/main/src/data/ports.json'>Contribute →</a>
   </p>
 </section>
 
