Switch to avif for raster images

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const siteUrl = 'https://ayu-theme.com'
     <!-- Open Graph -->
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
-    <meta property="og:image" content={`${siteUrl}/images/og-image.png`} />
+    <meta property="og:image" content={`${siteUrl}/images/og-image.avif`} />
     <meta property="og:url" content={siteUrl} />
     <meta property="og:type" content="website" />
 
@@ -39,7 +39,7 @@ const siteUrl = 'https://ayu-theme.com'
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
-    <meta name="twitter:image" content={`${siteUrl}/images/og-image.png`} />
+    <meta name="twitter:image" content={`${siteUrl}/images/og-image.avif`} />
 
     <title>{title}</title>
     <ThemeStyles />
