--- a/src/components/CodeSection.astro
+++ b/src/components/CodeSection.astro
@@ -148,7 +148,7 @@ const highlighted = highlighter.codeToHtml(code, { lang: 'rust', theme: 'ayu' })
 
 <section class='hero-section' id='code'>
   <!-- Branding -->
-  <div class='branding'>
+  <header class='branding'>
     <AyuLogomark class='logo' aria-label='ayu' />
     <h1 class='headline'>
       <span class='c-keyword'>Simple, </span><span class='c-func'>bright,</span>
@@ -162,7 +162,7 @@ const highlighted = highlighter.codeToHtml(code, { lang: 'rust', theme: 'ayu' })
         >.</span
       >
     </h1>
-  </div>
+  </header>
 
   <!-- Code display -->
   <div class='code-display' style={`--code-center: ${codeCenter}`}>
